# groceries_delivery_app

./: .gitignore  groceries.db
app/: pubspec.yaml
app/android/app/: build.gradle
app/lib/: main.dart
app/lib/utils/: helper_functions.dart
backend/: .env  groceries.db  nohup.out  pyproject.toml  requirements.txt  settings.py
backend/app/: crud.py  db.py  main.py  models.py  schemas.py  seed_data.py  settings.py
backend/app/api/v1/: auth.py  auth_verify.py  categories.py  orders.py  products.py
backend/app/api/v2/: yk_payment.py
backend/app/api/v2/admin/: categories.py  images.py  products.py
backend/app/bot/: main.py
backend/app/core/: settings.py
backend/app/core/crud/: categories.py  orders.py  products.py
backend/app/core/models/: db.py  models.py  payments.py  sms.py
backend/app/core/schemas/: manage.py  orders.py  schemas.py  sms.py  user.py
backend/app/crud/: categories.py  orders.py  products.py
backend/app/routers/: auth.py  categories.py  orders.py  products.py
backend/app/routes/v1/: auth.py  categories.py  orders.py  products.py
backend/app/sms/: main.py  phone_otp.py
backend/app/templates/manage/: admin.js  index.html
backend/app/templates/manage/admin/: admin.js  index.html
backend/migrations/: env.py
backend/migrations/versions/: 0e24c44e9d20_update_orders.py  39182343d5db_update_orders_add_comment.py  65b4d8c9356a_add_phone_otp_table.py  bdfa9a95bab2_products_json_nutritional_value_package_.py  dc2635a06347_update_orders_2.py  fc6b336f833f_init.py
backend/services/yk/: main.py  payments.py
(+15 files in other folders)
