[project]
name = "backend-groceries-delivery-app"
version = "0.1.0"
description = "Backend for groceries_delivery_app"
authors = [
    {name = "zxcenigma"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "fastapi-users-db-sqlalchemy (>=7.0.0,<8.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "yookassa (>=3.6.0,<4.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "tzdata (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
